adding new feature and refactor
